# codex

codex-rs/: Cargo.toml
codex-rs/analytics/src/: analytics_client_tests.rs
codex-rs/app-server-protocol/schema/json/: ClientRequest.json  ServerNotification.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
codex-rs/app-server-protocol/src/protocol/: thread_history.rs
codex-rs/app-server/src/: message_processor.rs  request_processors.rs
codex-rs/app-server/src/request_processors/: plugin_response_conversions.rs  plugins.rs  (+4 more)
codex-rs/cli/src/: main.rs
codex-rs/code-mode/src/: description.rs  response.rs  service.rs
codex-rs/config/src/: permissions_toml.rs
codex-rs/core/: config.schema.json
codex-rs/core-plugins/src/: manager.rs  manager_tests.rs  remote.rs
codex-rs/core/src/: codex_thread.rs  credentialed_routes.rs  exec.rs  exec_policy_tests.rs  lib.rs  mcp_tool_call.rs  network_proxy_loader.rs  network_proxy_loader_tests.rs  queued_turns.rs
codex-rs/exec/src/: lib.rs
codex-rs/fork-features/codex-channel-bridge/: DESIGN.md
codex-rs/fork-features/codex-channel-socket-bridge/: Cargo.toml
codex-rs/fork-features/codex-channel-socket-bridge/scripts/: run_issue_6_meta_matrix.sh
codex-rs/fork-features/codex-channel-socket-bridge/src/: lib.rs
codex-rs/network-proxy/src/: mitm.rs
codex-rs/protocol/src/: items.rs  models.rs  protocol.rs
codex-rs/rollout-trace/src/: protocol_event.rs
codex-rs/rollout/src/: policy.rs
codex-rs/state/src/: lib.rs  runtime.rs
codex-rs/tools/src/: tool_config.rs  tool_config_tests.rs  tool_output.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs  lib.rs
(+63 files in other folders)
