[package]
name = "codex-channel-socket-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
autobins = false

[[bin]]
name = "codex-channel-socket-bridge-poc"
path = "src/bin/poc.rs"

[[bin]]
name = "codex-channel-busy-concurrency-poc"
path = "src/bin/busy_concurrency_poc.rs"

[lib]
name = "codex_channel_socket_bridge"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-app-server-client = { workspace = true }
codex-app-server-protocol = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt", "sync"] }
tracing = { workspace = true }
